# GooData

./: .gitattributes  .gitignore  CMakeLists.txt  ReadMe.md  ToDo.txt  update_examples.bas
doc/: CMakeLists.txt  GooData-docs.xml  GooData-scan.bas  goodata-decl-list.txt  goodata-decl.txt  goodata-scan.bas  goodata-sections.txt  goodata-undocumented.txt  goodata.args  goodata.hierarchy  goodata.interfaces  goodata.prerequisites  gtk-doc-scan.bas  gtkdocentities.ent.in  string.bi
doc/MyXml/: _example.c  _example.xml  _example_1.bas  _example_2.bas  _example_curve_areas.bas  _examples2d.xml  _examples3d.xml  _gallery.xml  _overview.xml  example_bar.bas  example_bar.bas.xml  example_bar_stacked.bas  example_bar_stacked.bas.xml  example_box_outliers.bas  example_box_outliers.bas.xml  example_box_simple.bas  example_box_simple.bas.xml  example_curve_areas.bas  example_curve_areas.bas.xml  example_curve_helix.bas  example_curve_helix.bas.xml  example_curve_markers.bas  example_curve_markers.bas.xml  example_curve_perpens.bas  example_curve_perpens.bas.xml  example_curve_portfolio.bas  example_curve_portfolio.bas.xml  example_curve_slope.bas  example_curve_slope.bas.xml  example_pie_avarage.bas  example_pie_avarage.bas.xml  example_pie_percent.bas  example_pie_percent.bas.xml  example_pie_rings.bas  example_pie_rings.bas.xml  example_pie_segmented.bas  example_pie_segmented.bas.xml  example_pie_simple.bas  example_pie_simple.bas.xml  example_pie_stacked.bas  (+4 more)
examples/: all.bas  e1.bas  e2.bas  ex_3d_perpens.bas  ex_bar.bas  ex_box_areas.bas  ex_box_slope.bas  ex_curve_areas.bas  ex_curve_markers.bas  ex_curve_slope.bas  ex_line_markers.bas  ex_pie.bas  ex_pie_gantt.bas  ex_polax.bas  example.lst  example_bar.bas  example_bar_stacked.bas  example_box_outliers.bas  example_box_simple.bas  example_curve_areas.bas  example_curve_helix.bas  example_curve_markers.bas  example_curve_perpens.bas  example_curve_portfolio.bas  example_curve_slope.bas  example_pie_avarage.bas  example_pie_percent.bas  example_pie_rings.bas  example_pie_segmented.bas  example_pie_simple.bas  example_pie_stacked.bas  example_simplecurve.bas  gallery.lst  make.xml  make2.bas  order.lst  test.bas  test_bar.bas  test_pie.bas  test_pie_simple.bas  (+1 more)
src/: CMakeLists.txt  Goo_Axis.bas  Goo_Axis.bi  Goo_Bar2d.bas  Goo_Bar2d.bi  Goo_Box2d.bas  Goo_Box2d.bi  Goo_Curve2d.bas  Goo_Curve2d.bi  Goo_Data.bas  Goo_Data.bi  Goo_Glob.bas  Goo_Glob.bi  Goo_Pie2d.bas  Goo_Pie2d.bi  Goo_Polax.bas  Goo_Polax.bi  Goo_Simplecurve2d.bas  Goo_Simplecurve2d.bi
